--- a/Python/데이터 전처리/2002기온분석.ipynb
+++ b/Python/데이터 전처리/2002기온분석.ipynb
@@ -15,8 +15,8 @@
    ],
    "source": [
     "import csv\n",
-    "f = open('Seoul.csv', 'r', encoding='cp949')\n",
-    "data = csv.reader(f,delimiter=',')\n",
+    "f = open('Seoul.csv', 'r', encoding='cp949') # r 읽기용으로 파일 열기  cp949(Window 한글 인코딩 방식) \n",
+    "data = csv.reader(f,delimiter=',') # delimiter = 구분자 -> ',' -> ,기준으로 구분!\n",
     "print(data)\n",
     "f.close()"
    ]
@@ -26,7 +26,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import csv\n",
+    "f = open('Seoul.csv','r',encoding='cp949')\n",
+    "data = csv.reader(f)\n",
+    "for row in data :\n",
+    "    print(row)\n",
+    "f.close()"
+   ]
   },
   {
    "cell_type": "code",
