--- a/Python/데이터 시각화/생일_기온변화.ipynb
+++ b/Python/데이터 시각화/생일_기온변화.ipynb
@@ -81302,7 +81302,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import csv\n",
+    "import matplotlib.pyplot as plt\n",
+    "f= open('../데이터 전처리/서울기온분석/Seoul.csv')\n",
+    "data=csv.reader(f)\n",
+    "for row in data:\n",
+    "    if row[-1]!='' and row[]"
+   ]
   },
   {
    "cell_type": "code",
@@ -81382,7 +81389,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a077222d77dfe082b8f1dd562ad70e458ac2ab76993a0b248ab0476e32e9e8dd"
+    "hash": "fd53496d442b34941cd007747b2bc73af28196ded78ae8cb95d9aa782ae1d49e"
    }
   }
  },
