--- a/Python/데이터 시각화/생일_기온변화.ipynb
+++ b/Python/데이터 시각화/생일_기온변화.ipynb
@@ -81308,7 +81308,8 @@
     "f= open('../데이터 전처리/서울기온분석/Seoul.csv')\n",
     "data=csv.reader(f)\n",
     "for row in data:\n",
-    "    if row[-1]!='' and row[]"
+    "    if row[-1]!='' and row[-2]:\n",
+    "        "
    ]
   },
   {
