--- a/Python/데이터 시각화/생일_기온변화.ipynb
+++ b/Python/데이터 시각화/생일_기온변화.ipynb
@@ -81302,7 +81302,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 매년 2월 14일 최고, 최소 기온\n",
+    "import csv\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "f=open('../데이터 전처리/서울기온분석/Seoul.csv')\n",
+    "data = csv.reader(f)\n",
+    "next(data)\n",
+    "high=[]\n",
+    "low=[]\n",
+    "for row in data:\n",
+    "    if row[-1] !='' and row[-2]!='':\n",
+    "        if 1983 <= int(row[0].split('-')[0]):\n",
+    "            if row[0].split('-')[1]== '02' and row[0].split('-')[2]=='14':\n",
+    "                high.append(float(row[-1]))\n",
+    "                low.append(float(row[-2]))\n",
+    "plt.plot(high, 'r')\n",
+    "plt.plot(low, 'b')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
