--- a/Python/데이터 시각화/생일_기온변화.ipynb
+++ b/Python/데이터 시각화/생일_기온변화.ipynb
@@ -81309,6 +81309,7 @@
     "data=csv.reader(f)\n",
     "for row in data:\n",
     "    if row[-1]!='' and row[-2]:\n",
+    "        if 2020 <= int(row[0].split('-')[0]):\n",
     "        "
    ]
   },
