--- a/Python/데이터 시각화/기본그래프그리기.ipynb
+++ b/Python/데이터 시각화/기본그래프그리기.ipynb
@@ -21,7 +21,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "plt.plot([10,20,30,40])\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
@@ -95,7 +96,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.title('plotting')\n",
+    "plt.plot([10,20,30,40,50])\n",
+    "plt.show()\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -149,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
